--- a/config.yaml
+++ b/config.yaml
@@ -35,103 +35,96 @@ teams:
     pick: 1
   
 players: # Ideally less than 15 characters
-  - "Himanshu"
-  - "Raj"
-  - "Akhil"
-  - "Anish"
-  - "Rohit"
-  - "Arun"
-  - "Gokul"
-  - "Adarsh"
-  - "Rahul"
-  - "Vivek"
-  - "Pranav"
-  - "Vijay"
-  - "Shiva"
-  - "Nitin"
-  - "Karthik"
-  - "Sachin"
-  - "Saurav"
-  - "Shyam"
-  - "Vinay"
-  - "Lokesh Vishwanath"
-  - "Manoj"
-  - "Praveen"
-  - "Raghu"
-  - "Ravish"
-  - "Varun"
-  - "Sriram"
-  - "Sujith"
-  - "Sunil"
-  - "Shashank"
-  - "Arjun"
-  - "Deepak"
-  - "Harish"
-  - "Prithvi"
-  - "Naveen"
-  - "Uday"
-  - "Vishnu"
-  - "Vasu"
-  - "Dhruv"
-  - "Krishna"
-  - "Mohan"
-  - "Gopal"
-  - "Jitesh"
-  - "Santosh"
-  - "Subhash"
+  - "Abdul"
+  - "Abey Eapen"
+  - "Abhilash"
+  - "Ajay Majethia"
+  - "Amanpreet Singh"
+  - "Antony"
+  - "Arslan Bhangu"
+  - "Arvind R"
+  - "Ashly"
+  - "Atul Singh"
+  - "Babar Bashir"
+  - "Balaji S"
+  - "Bhakta"
+  - "Bhavadeep"
+  - "Brajesh Singh"
+  - "Brijesh"
+  - "Bunpreet Singh"
+  - "Chaitanya T"
   - "Chetan"
-  - "Nithin"
-  - "Gautam"
-  - "Manu"
-  - "Chandra"
-  - "Baskar"
-  - "Vikram"
-  - "Ramesh"
-  - "Sudhir"
-  - "Kiran"
-  - "Bharat"
-  - "Ganesh"
-  - "Jayesh"
-  - "Dinesh"
-  - "Ishaan"
-  - "Kamal"
-  - "Mahesh"
-  - "Naresh"
-  - "Prakash"
-  - "Prem"
-  - "Shankar"
-  - "Tarun"
-  - "Vishal"
-  - "Vimal"
-  - "Aditya"
-  - "Aravind"
-  - "Hari"
-  - "Kunal"
-  - "Mukesh"
-  - "Naren"
-  - "Ritesh"
-  - "Sagar"
-  - "Sameer"
-  - "Tejas"
-  - "Umesh"
-  - "Venkat"
-  - "Yash"
-  - "Zubin"
-  - "Abhinav"
-  - "Balaji"
-  - "Chirag"
-  - "Darshan"
-  - "Farhan"
-  - "Girish"
-  - "Hiten"
-  - "Irfan"
-  - "Jeevan"
-  - "Keshav"
-  - "Lalit"
-  - "Mayank"
-  - "Nikhil"
-  - "Omkar"
-  - "Pradeep"
-  - "Prashant"
-  - "Prathap"
-  - "Paparap"
+  - "Chirag Vijay"
+  - "Debashis C"
+  - "Dev Bogiatoo"
+  - "Dhaval Padia"
+  - "Durairaj Kumar"
+  - "Elango T"
+  - "Eric Sylvester"
+  - "Ganesh Koushic"
+  - "Gaurav Gaud"
+  - "Gopal Kallure"
+  - "Govinda Raju"
+  - "Gowrishankar S"
+  - "Harsha"
+  - "Hemin Patel"
+  - "Himanshu S"
+  - "Ibrahim Khan"
+  - "Inderdip Singh"
+  - "Jay"
+  - "Jitendra Kumar"
+  - "Khalil"
+  - "Kumar Devasish"
+  - "Mahee"
+  - "Manivannan K"
+  - "Mario Pandian"
+  - "Monica Schmidt"
+  - "Nadeem"
+  - "Nandeesh"
+  - "Narendrag"
+  - "Naresh K"
+  - "Naveen"
+  - "Naveen V"
+  - "Nirmalraj S"
+  - "Nitin Chauhan"
+  - "Parin Shah"
+  - "Partho BC"
+  - "Parvath Reddy"
+  - "Pranjal Malav"
+  - "Prash"
+  - "Prashant P"
+  - "Prashanth M"
+  - "Raja sekhar"
+  - "Rajesh"
+  - "Rajkumar M"
+  - "Rakesh"
+  - "Ramon Howe"
+  - "Rehan"
+  - "Rohit Jain"
+  - "Rohullah M"
+  - "Rony"
+  - "Sai Vamshi"
+  - "Sakhi Rahman"
+  - "Sameer T"
+  - "Sanath Shetty"
+  - "Sandeep C"
+  - "Sateesh"
+  - "Satya T"
+  - "Shaizullah M"
+  - "Sikandar AD"
+  - "Simranjeet S"
+  - "Siva K"
+  - "Subhashish C"
+  - "Sudin Huddar"
+  - "Vaidya TR"
+  - "Venkatraman K"
+  - "Vignesh R"
+  - "Vignesh SR"
+  - "Vijay Ramesh"
+  - "Vikas Kalia"
+  - "Vishal C"
+  - "Yasar Ijaz"
+  - "Yashas Reddy"
+  - "Yuva Raju C"
+  - "Krishna"
+  - "Saipreetham"
